Implemented JSON transfer from one service to another through kafka